// protoc --proto_path .\grpc\pb\ --go_out=. --go-grpc_out=. .\grpc\pb\transfer.proto
syntax = "proto3";

package pb;

option go_package = "grpc/libs/;libs";

service FileTransferService {
  rpc ServerCheck(Ping) returns (Pong) {};
  rpc SendMeta(MetaRequest) returns (MetaResponse) {};
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse) {};
  rpc UploadFile(stream ChunkData) returns (TransferResponse) {};
  rpc DownloadFile(TransferRequest) returns (stream ChunkData) {};
}

message Ping { bool status = 1; }

message Pong { bool status = 1; }

message MetaRequest {
  string tag = 1;
  string name = 2;
  int64 size = 3;
  int64 chunks = 4;
  string hash = 5;
}

message MetaResponse {
  bool status = 1;
  string message = 2;
}

message ChunkData {
  bytes data = 1;
  int64 chunk = 2;
}

message TransferRequest {
  string tag = 1;
  string name = 2;
}

message TransferResponse {
  bool status = 1;
  string message = 2;
}

message FileItem {
  string name = 1;
  int64 size = 2;
  string hash = 3;
  int64 chunks = 4;
}

message ListFilesRequest { string tag = 1; }

message ListFilesResponse {
  bool status = 1;
  string message = 2;
  repeated FileItem files = 3;
}
